cluster/apps/networking/vpn/wireguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard
  namespace: vpn
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      service: wireguard
  template:
    metadata:
      labels:
        service: wireguard
    spec:
      containers:
        - name: wireguard
          image: linuxserver/wireguard:1.0.20260223
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 128Mi
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: wireguard-config
