cluster/apps/networking/vpn/wireguard/service.yaml
#! Service definition for WireGuard, exposes its UDP port as a NodePort service externally on <NodeIP:31820>
apiVersion: v1
kind: Service
metadata:
  name: wireguard
  namespace: vpn
  labels:
    service: wireguard
spec:
  type: NodePort
  selector:
    service: wireguard
  ports:
    - port: 51820
      nodePort: 31820
      targetPort: 51820
      protocol: UDP
